简单的图片上传下载

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ server.port=8081
 spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
+spring.image.upload-path=classpath:/static/
