图片上传, 可发布带图片的微博

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.enabled=true
 server.port=8081
+server.servlet.context-path=/microblog
 spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
-spring.image.upload-path=classpath:/static/
+spring.image.upload-path=./upload/images/
