--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ server.servlet.context-path=/microblog
 spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
 spring.image.upload-path=./upload/images/
