--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
 spring.image.upload-path=./upload/images/
