--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
-spring.image.upload-path=./upload/images/
+spring.upload.image.path=classpath:/static/upload/images/
+spring.upload.image.allow-suffix=jpg,jpeg,png,gif
