--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.upload.image.path=classpath:/static/upload/images/
 spring.upload.image.allow-suffix=jpg,jpeg,png,gif
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/static/**,/upload/images/**
+spring.resources.chain.compressed=true
+spring.resources.chain.cache=true
